--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  supabase_flutter: ^1.10.19
 
 
   # The following adds the Cupertino Icons font to your application.
