--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   supabase_flutter: ^1.10.19
   flame: ^1.9.1
+  get: ^4.6.6
 
 
   # The following adds the Cupertino Icons font to your application.
